# slang

./: .gitignore  Cargo.toml  build.rs  compile_commands.json  ctosl.t  loc.md  out  vk.c
.cache/clangd/index/: func.cpp.A621681267B31ADD.idx
grammar/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json
grammar/syntaxes/: slang.tmLanguage.json
src/: ast.rs  emit.rs  lang.lalrpop  lexer.lalrpop  lexer.rs  llvm.rs  lower.rs  lower2.rs  main.rs  memory.rs  reduce.rs  slang.sl  vk.sl
tests/: helloworld.sl  highorder.sl  test0.sl  test1.sl  test2.sl  test3.sl  test4.sl  tree.sl  vk.sl
